--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <image 2.jpg>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Me - Aike Kawi</title>
+  <title>About Me - Aike T. Kawi</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400&display=swap" rel="stylesheet">
   <style>
     body {
@@ -11,7 +12,7 @@
       font-family: 'Kanit', sans-serif;
       background: url('4.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: rgb(148, 119, 119);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,7 +24,7 @@
       width: 150px;
       height: 150px;
       border-radius: 50%;
-      border: 3px solid white;
+      border: 3px solid rgb(43, 22, 22);
       margin-bottom: 1.5rem;
     }
 
@@ -38,15 +39,15 @@
     .back-btn {
       margin-top: 2rem;
       text-decoration: none;
-      color: white;
-      border: 2px solid white;
+      color: rgb(99, 48, 48);
+      border: 2px solid rgb(85, 46, 46);
       padding: 0.5rem 1.2rem;
       border-radius: 30px;
       transition: all 0.3s ease;
     }
 
     .back-btn:hover {
-      background: white;
+      background: rgb(24, 23, 23);
       color: black;
     }
   </style>
