--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aike Kawi | Homepage</title>
+  <title>Aike T. Kawi | Homepage</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
   <style>
     * {
@@ -16,7 +16,7 @@
       font-family: 'Kanit', sans-serif;
       background: url('3.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: rgb(14, 12, 12);
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -63,7 +63,7 @@
     .link-btn {
       text-decoration: none;
       color: black;
-      border: 2px solid white;
+      border: 2px solid rgb(83, 78, 78);
       padding: 0.5rem 1.2rem;
       border-radius: 30px;
       background: rgba(0, 0, 0, 0.4);
@@ -71,14 +71,14 @@
     }
 
     .link-btn:hover {
-      background: white;
+      background: rgb(114, 32, 32);
       color: black;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to My Website</h1>
-  <p>This is Aike Kawi — explore more about me, my hobbies, and how to get in touch.</p>
+  <p>This is Aike Kawi — explore more about me, my hobbies, and my contact.</p>
   
   <img id="icon" src="3.jpg" alt="Icon" onclick="toggleNav()" />
 
