--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     }
 
     .card {
-      background: white;
+      background: rgb(17, 16, 16);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       border-radius: 12px;
       overflow: hidden;
@@ -59,7 +59,7 @@
     .back-btn {
       margin-top: 3rem;
       text-decoration: none;
-      color: #fff;
+      color: #000000;
       background-color: #444;
       padding: 0.7rem 1.5rem;
       border-radius: 30px;
