--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: 'Kanit', sans-serif;
       background: url('3.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: black(14, 12, 12);
+      color: white(14, 12, 12);
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -96,5 +96,6 @@
   </script>
 </body>
 </html>
+
 
 
