--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Kanit', sans-serif;
       background: #f3f3f3;
-      color: #333;
+      color: white
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -59,7 +59,7 @@
     .back-btn {
       margin-top: 3rem;
       text-decoration: none;
-      color: #000000;
+      color: black
       background-color: #444;
       padding: 0.7rem 1.5rem;
       border-radius: 30px;
@@ -95,3 +95,4 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
+
