--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Kanit', sans-serif;
-      background: #f3f3f3;
+      background: "C:\Users\Admin\Downloads\6.jpg"
       color: white
       display: flex;
       flex-direction: column;
@@ -95,4 +95,5 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
+
 
