--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Kanit', sans-serif;
       background: "C:\Users\Admin\Downloads\6.jpg"
-      color: blacl
+      color: black
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -95,6 +95,7 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
+
 
 
 
