--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
     h1 {
       margin-bottom: 1.5rem;
       text-align: center;
-      color: #222;
+      color: black
     }
 
     .gallery {
@@ -95,6 +95,7 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
+
 
 
 
