--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Kanit', sans-serif;
       background: "C:\Users\Admin\Downloads\6.jpg"
-      color: black
+      color: white
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -18,7 +18,7 @@
     }
 
     h1 {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2.5rem;
       text-align: center;
       color: black
     }
@@ -26,7 +26,7 @@
     .gallery {
       display: flex;
       flex-wrap: wrap;
-      gap: 2rem;
+      gap: 3rem;
       justify-content: center;
       max-width: 1000px;
     }
@@ -46,8 +46,8 @@
     }
 
     .card img {
-      height: 200px;
-      width: 100%;
+      height: 300px;
+      width: 200%;
       object-fit: cover;
     }
 
@@ -60,14 +60,14 @@
       margin-top: 3rem;
       text-decoration: none;
       color: black
-      background-color: #444;
+      background-color: grey
       padding: 0.7rem 1.5rem;
       border-radius: 30px;
       transition: background 0.3s ease;
     }
 
     .back-btn:hover {
-      background-color: #222;
+      background-color: grey
     }
 
     @media (max-width: 768px) {
@@ -95,6 +95,7 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
+
 
 
 
