--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
     body {
       margin: 0;
       font-family: 'Kanit', sans-serif;
-      background: "C:\Users\Admin\Downloads\6.jpg"
-      color: white
+      background: #f3f3f3;
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -18,21 +18,21 @@
     }
 
     h1 {
-      margin-bottom: 2.5rem;
+      margin-bottom: 1.5rem;
       text-align: center;
-      color: black
+      color: #222;
     }
 
     .gallery {
       display: flex;
       flex-wrap: wrap;
-      gap: 3rem;
+      gap: 2rem;
       justify-content: center;
       max-width: 1000px;
     }
 
     .card {
-      background: rgb(17, 16, 16);
+      background: white;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       border-radius: 12px;
       overflow: hidden;
@@ -46,8 +46,8 @@
     }
 
     .card img {
-      height: 300px;
-      width: 200%;
+      height: 200px;
+      width: 100%;
       object-fit: cover;
     }
 
@@ -59,15 +59,15 @@
     .back-btn {
       margin-top: 3rem;
       text-decoration: none;
-      color: black
-      background-color: grey
+      color: #fff;
+      background-color: #444;
       padding: 0.7rem 1.5rem;
       border-radius: 30px;
       transition: background 0.3s ease;
     }
 
     .back-btn:hover {
-      background-color: grey
+      background-color: #222;
     }
 
     @media (max-width: 768px) {
@@ -95,10 +95,3 @@
   <a class="back-btn" href="index.html">Back to Homepage</a>
 </body>
 </html>
-
-
-
-
-
-
-
